Fix z-index.

--- a/_scss/_modules/Scheduler.scss
+++ b/_scss/_modules/Scheduler.scss
@@ -191,7 +191,7 @@
 
 .scheduler__navigation-daylink {
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
     background-color: vars.$color-black-transparent;
     position: relative;
 }
